# voidc

./: .gitattribute  .gitattributes  .gitignore  .hgignore  .mailmap  CMakeLists.txt  Makefile  README.md  arithmetic.void  arithmetic_test.void  block.void  block_test.void  compile_type.void  def_import_test.void  defer.void  defer_test.void  definitions.void  definitions_test.void  example.void  expr_test.void  expr_util.void  expression.void  expression_test.void  fun_hack.void  fun_import_test.void  function.void  function_hack.void  function_test.void  grammar.void  grammar_test.void  hello.void  hello_jit.void  if_then_else.void  if_then_else_test.void  import.void  import_test.void  incdirs.doit  locals.void  loop.void  loop_test.void  (+64 more)
compiler/: micros.dir
compiler/import/: mainline.void  micros.dir  void.doit
compiler/import/level-00/: README.md  __import__.void  micros.dir  voidc_ast.void  voidc_quark.void  voidc_target.void  voidc_types.void  voidc_util.void  voidc_visitor.void  vpeg_context.void  vpeg_grammar.void  vpeg_parser.void
compiler/import/level-01/: __import__.void  arithmetic.void  block.void  compile_type.void  defer.void  definitions.void  expr_util.void  expression.void  function_hack.void  grammar.void  if_then_else.void  loop.void  memory.void  micros.dir  switch.void
compiler/import/level-02/: README.md  __import__.void  aggregates.void  compression.void  condcomp.void  handlers_etc.void  inlining.void  literals.void  loops_etc.void  mangling.void  micros.dir  overloading.void  projections.void  structures.void  unions.void
compiler/import/level-03/: __import__.void  coercions.void  generating_ast.void  generics_etc.void  global_objects.void  heap_objects.void  intrinsics_derive.void  local_objects.void  macros.void  micros.dir  namespaces.void
compiler/src/: micros.dir
compiler/stage0/: README.md  micros.dir  voidc_ast.cpp  voidc_ast.h  voidc_compiler.cpp  voidc_compiler.h  voidc_dllexport.h  voidc_main.cpp  voidc_quark.cpp  voidc_quark.h  voidc_stdio.cpp  voidc_stdio.h  voidc_target.cpp  voidc_target.h  voidc_types.cpp  voidc_types.h  voidc_util.cpp  voidc_util.h  voidc_visitor.cpp  voidc_visitor.h  vpeg_context.cpp  vpeg_context.h  vpeg_grammar.cpp  vpeg_grammar.h  vpeg_parser.cpp  vpeg_parser.h  vpeg_voidc.cpp  vpeg_voidc.h
compiler/test/: micros.dir
compiler/test/level-00/: README.md  example.void  import.void  incdirs.doit  locals.void  target_test.void  vpeg_tests.void  yatst.void
compiler/test/level-01/: arithmetic_test.void  block_test.void  def_import_test.void  defer_test.void  definitions_test.void  expr_test.void  expression_test.void  fun_hack.void  grammar_test.void  if_then_else_test.void  loop_test.void  mem_test.void  micros.dir  parsing_test.void  reference_test.void  some_test.void  switch_test.void  void.doit
compiler/test/level-02/: aggregates_test.void  condcomp_test.void  inl_import_test.void  inlining_test.void  literals_test.void  loops_etc_test.void  mangling_test.void  micros.dir  mng_import_test.void  overloading_test.void  projections_test.void  str_import_test.void  structures_test.void  uni_import_test.void  unions_test.void
compiler/test/level-03/: README.md  coercions_test.void  genast_mod_test.void  generating_ast_test.void  generics_etc_test.void  genetc_mod_test.void  global_objects_test.void  heap_objects_test.void  intrinsics_derive_test.void  macros_test.void  (+6 more)
doc/: TODO.txt  attic.txt  micros.dir  philoman-ru.txt  tutorial.md
level-00/: README.md  __import__.void  example.void  import_test.void  micros.dir  target_test.void  void.doit  voidc_ast.cpp  voidc_ast.h  voidc_ast.void  voidc_compiler.cpp  voidc_compiler.h  voidc_compiler.void  voidc_dllexport.h  voidc_main.cpp  voidc_quark.cpp  voidc_quark.h  voidc_quark.void  voidc_stdio.cpp  voidc_target.cpp  voidc_target.h  voidc_target.void  voidc_types.cpp  voidc_types.h  voidc_types.void  voidc_util.cpp  voidc_util.h  voidc_util.void  voidc_visitor.cpp  voidc_visitor.h  voidc_visitor.void  vpeg_context.cpp  vpeg_context.h  vpeg_context.void  vpeg_grammar.cpp  vpeg_grammar.h  vpeg_grammar.void  vpeg_parser.cpp  vpeg_parser.h  vpeg_parser.void  (+4 more)
level-01/: README.md  __import__.void  arithmetic.void  arithmetic_test.void  block.void  compile_type.void  def_import_test.void  defer.void  defer_test.void  definitions.void  definitions_test.void  expr_test.void  expr_util.void  expression.void  expression_test.void  fun_hack.void  function_hack.void  grammar.void  grammar_test.void  handlers.void  if_then_else.void  if_then_else_test.void  loop.void  mem_test.void  memory.void  micros.dir  parsing_test.void  reference_test.void  switch.void  switch_test.void  void.doit
level-02/: __import__.void  aggregates.void  aggregates_test.void  compression.void  condcomp.void  condcomp_test.void  handlers_etc.void  inl_import_test.void  inlining.void  inlining_test.void  literals.void  literals_test.void  loops_etc.void  loops_etc_test.void  mangling.void  mangling_test.void  micros.dir  mng_import_test.void  overloading.void  overloading_test.void  projections.void  projections_test.void  str_import_test.void  structures.void  structures_test.void  uni_import_test.void  unions.void  unions_test.void  unit_module.void
level-03/: __import__.void  coercions.void  coercions_test.void  genast_mod_test.void  generating_ast.void  generating_ast_test.void  generics_etc.void  generics_etc_test.void  genetc_mod_test.void  global_objects.void  global_objects_test.void  heap_objects.void  heap_objects_test.void  intrinsics_derive.void  intrinsics_derive_test.void  local_obj_ast_test.void  local_objects.void  local_objects_test.void  macros.void  macros_mod_test.void  macros_test.void  micros.dir  namesp_mod_test.void  namespaces.void  namespaces_test.void  void.doit
llvm-c/: Analysis.void  BitReader.void  BitWriter.void  Core.void  Error.void  ErrorHandling.void  Linker.void  Object.void  OrcBindings.void  Support.void  Target.void  TargetMachine.void  Types.void  micros.dir  prelude.void  void.doit
llvm-c/Transform/: PassBuilder.void  PassManagerBuilder.void
